added google scholar icon

--- a/_config.yml
+++ b/_config.yml
@@ -23,13 +23,14 @@ footer-links:
   flickr:
   github: kunert
   instagram:
-  linkedin:
+  linkedin: jameskunertgraf
   pinterest:
   rss: # just type anything here for a working RSS icon
-  twitter: kunertgraf
+  twitter: JamesKunertGraf
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   youtube: # channel/<your_long_string> or user/<user-name>
   googleplus: # anything in your profile username that comes after plus.google.com/
+  googlescholar: HdMKpSQAAAAJ&hl
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
